Almost Complete Tribunal platform submission for Dogfood 2026
